--- a/wordle/public/assets/style.css
+++ b/wordle/public/assets/style.css
@@ -1,3 +1,16 @@
+:root{
+    --green: #538d4e;
+    --yellow: #b59f3b;
+    --gray: #565758;
+    --white: #fff;
+}
+
+body{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
 .board{
     display: grid;
     row-gap: 10px;
@@ -11,12 +24,20 @@
 
 .letter-box{
     box-sizing: content-box;
-    height: 30px;
-    width: 20px;
+    height: 50px;
+    width: 50px;
     border: 1px solid black;
     float: left;
     margin-right: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--white);
+    font-size: 40px;
+
+}
+
+.input-container{
+    position: relative;
+    top: 10px;
 }
