--- a/wordle/public/assets/style.css
+++ b/wordle/public/assets/style.css
@@ -79,7 +79,6 @@ body {
     width: 40px;
     padding: 0.5rem;
     margin: 0 2px;
-    cursor: pointer;
     text-transform: uppercase;
     background-color: var(--white);
     border-radius: 20%;
@@ -90,3 +89,75 @@ body {
     width: fit-content !important ;
     text-align: center;
 }
+
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+  }
+
+
+  .popup .show {
+    visibility: visible;
+  }
+
+  .popup .showtemp{
+    visibility: visible;
+    animation: fadeOut 2s forwards;
+  }
+
+  .popupbutton{
+    border-radius: 5px;
+  }
+
+  /* CSS */
+  .popupbutton{
+    background-color: #fff;
+    border: 1px solid #d5d9d9;
+    border-radius: 8px;
+    box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+    box-sizing: border-box;
+    color: #0f1111;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 13px;
+    line-height: 29px;
+    padding: 0 10px 0 11px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    width: 70px;
+  }
+  
+  .button-13:hover {
+    background-color: #f7fafa;
+  }
+  
+  .button-13:focus {
+    border-color: #008296;
+    box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+    outline: 0;
+  }
+
+
+
+  @keyframes fadeOut {
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+
+
+  
